--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,7 @@
         {% if title %}
             <title>{{ title }} - Microblog</title>
         {% else %}
-            <title>Welcom to Microblog</title>
+            <title>Welcome to Microblog</title>
         {% endif %}
     </head>
     <body>
